[package]
name = "chatroom_server"
version = "0.1.0"
authors = ["Yasna Kateb <yasnakatebzadeh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
#blake2 = "0.8"
#libp2p = { path = "../rust-libp2p" }
libp2p = "0.41.0"
serde = "1.0.131"